# tarzan-server

./: .gitignore  .travis.yml  Procfile  README.md  Tarzan.hs  Web.hs  cabal.config  operator.output  operator.tarzan  tarzan.cabal
Text/Tarzan/: Application.hs  Expr.hs  Pretty.hs  Regex.hs  Stmt.hs
Text/Tarzan/Common/: Parser.hs
Text/Tarzan/Expr/: Parser.hs
Text/Tarzan/Regex/: Definitions.hs  Parser.hs
src/Data/: Tarzan.hs
src/Text/Tarzan/: Evaluator.hs  Pretty.hs  Regex.hs
src/Text/Tarzan/Expr/: Definitions.hs  Parser.hs
src/Text/Tarzan/Regex/: Definitions.hs  Parser.hs
static/: index.html  style.css
tests/: Tests.hs
webapp/: Application.hs  Web.hs
