name:                tarzan
version:             0.0.1
synopsis:            Everybody stand back. I know regular expressions.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           Copyright (c) 2014 Oleg Grenrus
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Data.Tarzan,
                       Text.Tarzan.Evaluator,
                       Text.Tarzan.Stmt,
                       Text.Tarzan.Expr,
                       Text.Tarzan.Regex
  other-modules:       Text.Tarzan.Expr.Definitions,
                       Text.Tarzan.Expr.Parser,
                       Text.Tarzan.Regex.Parser,
                       Text.Tarzan.Common.Parser
  build-depends:       base >=4.6 && <5,
                       containers >=0.5 && <0.6,
                       transformers >=0.4 && <0.5,
                       range-set-list >=0.0.7 && <0.1,
                       parsec >=3.1 && <3.2
  ghc-options:         -Wall

executable tarzan
  default-language:    Haskell2010
  hs-source-dirs:      cli
  main-is:             Cli.hs
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <5,
                       containers >=0.5 && <0.6,
                       range-set-list >=0.0.7 && <0.1,
                       parsec >=3.1 && <3.2,
                       tarzan

executable tarzan-www
  default-language:    Haskell2010
  hs-source-dirs:      webapp
  main-is:             Web.hs
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <5,
                       containers >=0.5 && <0.6,
                       range-set-list >=0.0.7 && <0.1,
                       parsec >=3.1 && <3.2,
                       http-types >=0.8 && <0.9,
                       system-filepath >=0.4 && <0.5,
                       wai >=3.0 && <3.1,
                       wai-app-static >= 3.0 && <3.1,
                       warp >=3.0 && <3.1,
                       text >=1.1 && <1.2,
                       bytestring >= 0.10 && <0.11,
                       tarzan

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Tests.hs
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >=4.6 && <5,
                       containers >= 0.5 && <0.6,
                       tasty >=0.8,
                       tasty-quickcheck >=0.8,
                       tarzan
